fix: emojis stretched in blog

--- a/src/styles/blog.less
+++ b/src/styles/blog.less
@@ -107,6 +107,7 @@
     img.emoji {
       display: inline-block;
       height: 1.15em;
+      width: auto;
       vertical-align: -0.1em;
     }
 
